packaged as base64 enc

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ OLD/._Circle-of-fifths.jpg
 OLD/._EightWay.lcb~0.1
 OLD/._Unknown.png
 support/._defaultscript.livecodescript
+._org.openxtalk.widget.piano.0.1.png
+._org.openxtalk.widget.piano.0.1.lce.b64
