--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ OLD/._Unknown.png
 support/._defaultscript.livecodescript
 ._org.openxtalk.widget.piano.0.1.png
 ._org.openxtalk.widget.piano.0.1.lce.b64
+.DS_Store
